# smart-library-repo-v2

Smart-Library/: chat.py  interface.py  pyproject.toml
Smart-Library/app/Books/: books_info.py
Smart-Library/app/Database_task/: database_vocter.py
Smart-Library/app/authors/: authors_info.py
Smart-Library/app/common/utils/: auth.py
Smart-Library/app/user/: user_crud.py  user_router.py  user_schema.py
Smart-library/app/Books/: books_info.py
Smart-library/app/Database_task/: database_curd.py  database_vocter.py
Smart-library/app/common/config/: database.py
Smart-library/app/common/utils/: auth.py
Smart-library/app/user/: user_crud.py  user_model.py  user_router.py
src/: App.css  App.module.css  App.tsx
src/components/BookItem/: bookitem.tsx
src/components/ChatBot/: chat.tsx  chatbot.tsx
src/components/Loader/: loader.tsx
src/components/Profile/: AdminPage.tsx  Dropdown.tsx  ProfilePage.tsx  ProtectedRoute.tsx  auth.tsx  profile.tsx
src/components/SearchBar/: searchbar.tsx
